--- a/packages/blog-frontend/src/index.html
+++ b/packages/blog-frontend/src/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="个人博客系统" />
     <title>我的博客</title>
+    <!-- 运行时环境变量注入 -->
+    <script>
+      window.__API_BASE_URL__ = '%VITE_API_BASE_URL%';
+    </script>
   </head>
   <body>
     <div id="root"></div>
