--- a/packages/blog-admin/src/index.html
+++ b/packages/blog-admin/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>博客管理后台</title>
+    <!-- 运行时环境变量注入 -->
+    <script>
+      window.__API_BASE_URL__ = '%VITE_API_BASE_URL%';
+    </script>
   </head>
   <body>
     <div id="root"></div>
